Resolved 3 column layout issue

--- a/src/main/webapp/templates/mytemplate/mytemplate.css
+++ b/src/main/webapp/templates/mytemplate/mytemplate.css
@@ -18,7 +18,7 @@ body {
 #container {
     background: blue;
     margin: auto;
-    width: 1280px;
+    width: 1580px;
     //height: 550px;
 }
 
@@ -36,7 +36,7 @@ body {
 
 #content .panel {
     vertical-align: top;
-    min-height: 550px;              
+    height: auto;
 }
 
 #footer {
